  - updated configure to check and setup LDFLAGS for OpenGLU library

v0.64-9
  - MacOS X 'Panther' G5 fix for OpenGL library loading in .first.lib
  - removed lpng and zlib from source tree 
  - support for automatic downloading of zlib and lpng on win32 
  - added demo directory with several examples using demo(rgl)

v0.64-10
  - updated .C() calls using PACKAGE="rgl"
  - updated Maintainer.mk using correct zlib version
  - improved dynamic unload using library.dynam.unload()
  - conditional macos x darwin code in .First.lib()

v0.64-11
  - removed several redundant semicolons, required by gcc 3.4 ansi-pedantic mode.
  - win32: uses R's zlib and libpng sources
  - win32: added virtual destructor in Win32GUIFactory (removes warning)
 
v0.64-12
  - cran bugfix: permissions of cleanup fixed.

v0.64-13
  - DESCRIPTION fix: moved R 1.41 -> R 1.4.1 dependency

v0.65
  - simplified build system: uses 'R' build system
  - added generic visualization/rendering interface (R3D)
  - text justification from 0 to 1
  - added primitive type: linestrips
  - fixed rgl.bringtotop, added stay option (win32)
  - added 4x4 matrix functions from djmrgl
  - added rgl.user2window and rgl.window2user functions
  - added user-selectable mouse handlers
  - added selection mouse handler
  - added trackball mouse handler
  - added z-distance sorted rendering of alpha-blended faces 
  - added gl2ps patch ( contributed by Albrecht Gebhard )
  - added port: native Mac OS X Carbon
  - bugfix: rgl.close() , rgl.quit() crashed on X11 occasionally.
  - generalized rgl.surface() to allow surface over any coordinate plane.
  - added r3dDefaults variable to allow user to set defaults
  - added environment texture-mapping

v0.65-2
  - added "all" and "viewpoint" to rgl.clear and clear3d
  - added static libpng build support and user customizable prefix (unix)
  - used xyz.coords in all functions taking x, y, z coordinates, allowing
    matrix or dataframe arguments (among others)